--- a/abcd.css
+++ b/abcd.css
@@ -16,26 +16,35 @@ body {
   margin: 0;
 }
 
+section {
+  width: 100%;
+}
+
 .container {
-  margin: 0 50px;
+  margin: 0 auto;
+  max-width: 500px;
 }
 
 .divider {
   border: 1px #cccccc solid;
   border-bottom: 0;
-  margin: 100px;
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.highlighter {
+  color: #f54552;
 }
 
 .navbar {
   position: fixed;
   z-index: 1000;
-  width: 100%;
-  height: 80px;
   padding: 10px 0;
   background-color: #f2f9f2;
 }
 
 .navbar .nav-btns {
+  display: none;
   gap: 60px;
 }
 
@@ -46,8 +55,21 @@ body {
   font-weight: 500;
 }
 
+.navbar .nav-btns a:hover {
+  color: #f05;
+}
+
+.navbar .nav-btns a .active {
+  color: green;
+}
+
 .home {
-  padding: 210px 0 0;
+  padding: 150px 0 100px;
+}
+
+.home .container {
+  max-width: 300px;
+  margin: 0 auto;
 }
 
 .home .img-desp {
@@ -55,10 +77,10 @@ body {
   max-width: 900px;
   width: 100%;
   margin: 0 auto;
-}
-
-.home .my-image {
-  width: 40%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .home .my-image img {
@@ -78,20 +100,19 @@ body {
   border-radius: 20px;
 }
 
-.home .my-description {
-  width: 60%;
-  padding-left: 60px;
-}
-
 .home .my-description .name {
-  font-size: 100px;
+  font-size: 50px;
   margin: 0;
   color: #ff5925;
 }
 
 .home .my-description .role {
-  font-size: 48px;
+  font-size: 30px;
   margin: 0;
+}
+
+.about {
+  padding: 50px 0;
 }
 
 .about h3 {
@@ -104,10 +125,9 @@ body {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  max-width: 750px;
-  width: 100%;
-  margin: 100px auto;
-  gap: 120px;
+  max-width: 300px;
+  margin: 50px auto;
+  gap: 50px;
 }
 
 .about h4 {
@@ -119,10 +139,24 @@ body {
   width: 100%;
 }
 
+.about .contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
 .d-flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -172,8 +206,6 @@ body {
   text-align: center;
   margin: 5px 2px;
   font-size: 30px;
-  width: 50px;
-  height: 50px;
 }
 
 .fa-linkedin, .fa-twitter, .fa-instagram {
@@ -195,5 +227,65 @@ body {
 
 .mt-20 {
   margin-top: 20ox;
+}
+
+@media only screen and (min-width: 992px) {
+  .container {
+    max-width: 900px;
+  }
+  .navbar .nav-btns {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar .d-flex {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .home .container {
+    max-width: 900px;
+  }
+  .home .img-desp {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .home .my-image {
+    width: 40%;
+  }
+  .home .my-description {
+    width: 60%;
+    padding-left: 60px;
+  }
+  .home .my-description .name {
+    font-size: 100px;
+  }
+  .home .my-description .role {
+    font-size: 50px;
+  }
+  .about .skills {
+    max-width: 900px;
+  }
+  .d-flex {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .divider {
+    max-width: 800px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .container {
+    max-width: 1100px;
+  }
+  .divider {
+    max-width: 900px;
+  }
 }
 /*# sourceMappingURL=abcd.css.map */
