--- a/abcd.scss
+++ b/abcd.scss
@@ -12,45 +12,60 @@ p,li,a{
 body{
     padding: 0;
     margin: 0;
-    // background-color: #f8f7ff;
+}
+section{
+    width: 100%;
 }
 .container{
-    margin: 0 50px;
+    margin: 0 auto;
+    max-width: 500px;
 }
 .divider{
     border: 1px rgb(204,204,204) solid;
     border-bottom: 0;
-    margin: 100px;
+    max-width: 300px;
+    margin: 0 auto;
+}
+.highlighter{
+    color: rgba(245, 69, 82, 1.0);
 }
 .navbar{
     position: fixed;
     z-index: 1000; 
-    width: 100%;
     padding: 10px 0;
     background-color: #f2f9f2;
     .nav-btns{
+        display: none;
         gap: 60px;
         a{
             text-decoration: none;
             font-size: 18px;
             color: #212529;
             font-weight: 500;
+            &:hover{
+                color: #f05;
+            }
+            .active{
+                color: green;
+            }
         }
     }
 }
 
 .home{
-    padding: 210px 0 0;
-    
+    padding: 150px 0 100px;
+    .container{
+        max-width: 300px;
+        margin: 0 auto;
+    }
     .img-desp{
         gap: 20px;
         max-width: 900px;
         width: 100%;
         margin: 0 auto;
+        flex-direction: column;
     }
     .my-image{
-        width: 40%;
-        // overflow: hidden;
         img{
             border-radius: 10px;
             width: 100%;
@@ -64,15 +79,13 @@ body{
         }
     }
     .my-description{
-        width: 60%;
-        padding-left: 60px;
         .name{
-            font-size: 100px;
+            font-size: 50px;
             margin: 0;
             color: rgb(255,89,37);
         }
         .role{
-            font-size: 48px;
+            font-size: 30px;
             margin: 0;
         }
         
@@ -80,6 +93,8 @@ body{
 }
 
 .about{
+    padding: 50px 0 ;
+    
     h3{
         font-size: 36px;
         text-align: center;
@@ -87,10 +102,9 @@ body{
     }
     .skills{
         justify-content: flex-start;
-        max-width: 750px;
-        width: 100%;
-        margin: 100px auto;
-        gap: 120px; 
+        max-width: 300px;
+        margin: 50px auto;
+        gap: 50px; 
     }
     h4{
         font-size: 30px;
@@ -99,16 +113,21 @@ body{
         max-width: 450px;
         width: 100%;
     }
+    .contacts{
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+    }
 }
 
 .d-flex{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
 
 .half-border-top{
-    // border: 1px gray solid;
     border-radius: 10px;
     padding: 50px;
     box-shadow: 48px -48px 53px 0px rgba(0,0,0,0.29) inset;
@@ -121,7 +140,6 @@ body{
 }
 
 .half-border-bottom{
-    // border: 1px gray solid;
     border-radius: 10px;
     padding: 50px;
     box-shadow: -48px -48px 53px 0px rgba(0,0,0,0.29) inset;
@@ -138,8 +156,6 @@ body{
     text-align: center;  
     margin: 5px 2px;  
     font-size: 30px;  
-    width: 50px;  
-    height: 50px;
   }  
   .fa-linkedin, .fa-twitter, .fa-instagram{
     color: white;
@@ -157,3 +173,59 @@ body{
   .mt-20{
     margin-top: 20ox;
   }
+
+  @media only screen and (min-width: 992px) {
+    .container{
+        max-width: 900px;
+    }
+    .navbar{
+        .nav-btns{
+            display: flex;
+        }
+        .d-flex{
+            flex-direction: row;
+        }
+        
+    }
+    .home{
+        .container{
+            max-width: 900px;
+        }
+        .img-desp{
+            flex-direction: row;
+        }
+        .my-image{
+            width: 40%;
+        }
+        .my-description{
+            width: 60%;
+            padding-left: 60px;
+            .name{
+                font-size: 100px;
+            }
+            .role{
+                font-size: 50px;
+            }
+        }
+    }
+    .about{
+        .skills{
+            max-width: 900px;
+        }
+    }
+    .d-flex{
+        flex-direction: row;
+    }
+    .divider{
+        max-width: 800px;
+    }
+  }
+
+  @media only screen and (min-width: 1200px){
+    .container{
+        max-width: 1100px;
+    }
+    .divider{
+        max-width: 900px;
+    }
+  } 
