adjusted width of contents of about

--- a/abcd.css
+++ b/abcd.css
@@ -125,7 +125,7 @@ section {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  max-width: 300px;
+  max-width: 250px;
   margin: 50px auto;
   gap: 50px;
 }
@@ -144,9 +144,13 @@ section {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.about .contacts a {
+  text-decoration: none;
 }
 
 .d-flex {
