--- a/abcd.scss
+++ b/abcd.scss
@@ -102,7 +102,7 @@ section{
     }
     .skills{
         justify-content: flex-start;
-        max-width: 300px;
+        max-width: 250px;
         margin: 50px auto;
         gap: 50px; 
     }
@@ -116,7 +116,10 @@ section{
     .contacts{
         display: flex;
         width: 100%;
-        justify-content: space-evenly;
+        justify-content: space-between;
+        a{
+            text-decoration: none;
+        }
     }
 }
 
